# ESPRR

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  NOTICE.txt  README.md  esprr_docker_init.sh  extract_files.py  mypy.ini  reformat_nsrdb.py
.github/workflows/: buildimage.yml  combine_prs.yml  database.yml  javascript.yml  python.yml
api/: pyproject.toml  requirements-test.txt  requirements.txt  setup.py
api/esprr_api/: __init__.py  compute.py  conftest.py  main.py  models.py  queuing.py  storage.py  utils.py
api/esprr_api/data/: nsrdb.py  nsrdb.zarr.tar
api/esprr_api/data/tests/: test_nsrdb.py
api/esprr_api/routers/: groups.py  systems.py  user.py
api/esprr_api/routers/tests/: test_groups.py  test_systems.py
api/esprr_api/tests/: test_app.py  test_auth.py  test_compute.py  test_models.py  test_queuing.py  test_storage.py  test_utils.py
dashboard/: .eslintrc.js  auth_config.json  jest.config.js  package-lock.json  package.json  tsconfig.json  vue.config.js
dashboard/public/: Electric_Power_Transmission_Lines.geojson
dashboard/src/: App.vue  main.ts  models.ts  shims-leaflet-path-transform.d.ts
dashboard/src/api/: errors.ts  systemGroups.ts  systems.ts
dashboard/src/auth/: VueAuth.ts  auth.ts  authGuard.ts
dashboard/src/components/: DistributedMap.vue  GroupResults.vue  Map.vue  Results.vue
dashboard/src/router/: index.ts
dashboard/src/utils/: Colors.ts  DisplayNames.ts  downloadFile.ts
dashboard/src/views/: DistributedGroupDefinition.vue  Group.vue  GroupDefinition.vue  Groups.vue  System.vue  SystemDefinition.vue  Systems.vue
db/: migrate  schema.sql
db/migrations/: 20210329141817_create_users.sql  20210329142645_create_systems_table.sql  20210329144831_example_data.sql  20210412153722_compute_model.sql  20210419193357_qmanager.sql  20210429174612_adjusted_create_data.sql  20220302095800_create_system_group_table.sql  20220713160000_dc_power_addition.sql  20220802140000_dc_power_correction.sql
db/tests/: conftest.py  test_manager.py  test_system_data.py  test_system_groups.py  test_systems.py
(+28 files in other folders)
